--- a/toyota/templates/toyota/product_details.html
+++ b/toyota/templates/toyota/product_details.html
@@ -1,16 +1,20 @@
 {% extends 'toyota/base.html' %}
 {% block content %}
 
+
+
 <div>Name: {{ product.name }}</div>
 <div>Category: {{ product.category }}</div>
 <div>Description: {{ product.description }}</div>
 <div>Price per kg {{ product.price }} usd</div>
 <div>On stock: {{ product.stock }} kg</div>
 <div>{{ product.price_per_weight}}</div>
+<div>{{ product.price_per_weight}}</div>
+<img src="/images/AAAcAc9eNdcm8oHrNZY_94zp4RhMVb_cZm7nDscYLVu9Mw_l95EM6osXzj57OQGX9hSSGIYmL4nE21Bds_zNkiGPY.jpg">
 
 <form method="POST" action="{% url 'add_product_to_basket' product_pk=product.id %}">
     {% csrf_token %}
-<input type="number" name="quantity">
+<input type="number" step="0.001" name="quantity" min=0>
     <input type="submit" value="submit">
 </form>
 
